--- a/style.css
+++ b/style.css
@@ -1,171 +1,125 @@
-#slider{
-height:400px;
-margin: auto;
-margin-top: 20px;
+/* font-family: 'Merriweather', serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Sacramento', cursive; */
+
+
+
+body > h1{
+    text-align: center;
+    width:12%;
+    margin: auto;
+    background-color:#fee8e8;
+    font-family: 'Montserrat', serif;
 }
-#slider img{
- width:100%;
- height:100%;
+
+#container{
+    font-family: 'Montserrat', serif;
 }
 
-#slider-2{
- width:98%;
- height:400px;
- margin: auto;
- margin-top: 30px;
- }
- #slider-2 img{
-  width:100%;
-  height:100%;
- }
-
- #slider-3{
-  width:98%;
-  height:400px;
-  margin: auto;
-  margin-top: 30px;
-  }
-  #slider-3 img{
-   width:100%;
-   height:100%;
-  }
-
-  #slider-4{
-   display: flex;
-   margin: auto;
-  }
-  #slider-4 div{
-   width:31.5%;
-   margin: auto;
-  }
-  #slider-4 div img{
-   width: 100%;
-   margin: auto;
-  }
-  #slider-4 div h3{
-   margin-top: -30px;
-   background-color:whitesmoke;
-   position: relative;
-   width:90%;
-  }
-  #slider-4 div:nth-child(1){
-   width:31.5%;
-   margin: auto;
-   height:313px;
-  }
-  #slider-4 div:nth-child(1) h3{
-   margin-top: -50px;
-  }
-
-  #slider-5{
-   width:98%;
-   height:400px;
-   margin: auto;
-   margin-top: 30px;
-   }
-   #slider-5 img{
-    width:100%;
-    height:100%;
-   }
-
-   #slider-6{
-    display: flex;
-    margin: auto;
-   }
-   #slider-6 div{
-    width:31.5%;
-    margin: auto;
-   }
-   #slider-6 div img{
-    width: 100%;
-    margin: auto;
-   }
-   #slider-6 div h3{
-    margin-top: -30px;
-    background-color:whitesmoke;
-    position: relative;
+#container>div>img{
     width:90%;
-   }
-   #slider-6 div:nth-child(1){
-    width:31.5%;
-    margin: auto;
-    height:313px;
-   }
-   #slider-6 div:nth-child(1) h3{
-    margin-top: -50px;
-   }
+}
 
-   #slider-7{
+#container>div>img:hover{
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 1s ease;
+}
+
+#container>div{
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    padding:15px;
     display: flex;
-    margin: auto;
-   }
-   #slider-7 div{
-    width:31.5%;
-    margin: auto;
-   }
-   #slider-7 div img{
-    width: 100%;
-    margin: auto;
-   }
-   #slider-7 div h3{
-    margin-top: -30px;
-    background-color:whitesmoke;
-    position: relative;
-    width:90%;
-   }
-   #slider-7 div:nth-child(1){
-    width:31.5%;
-    margin: auto;
-    height:313px;
-   }
-   #slider-7 div:nth-child(1) h3{
-    margin-top: -50px;
-   }
+    flex-direction: column;
+    cursor:pointer; 
+    
+}
 
-   #slider-8{
+
+#container{
+    width:82%;
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 50px;
+    grid-column-gap: 40px;
+    
+    margin:auto;
+    margin-top:60px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    margin-bottom: 50px; 
+    
+}
+
+.price-space2{
+    margin-left:30px;
+    color:grey;
+}
+
+.price-space2,.price-space1{
+    font-size: 22px;
+    
+}
+
+#container>div>p{
+    font-size: 18px;
+}
+
+#shades-icon{
     display: flex;
-    margin: auto;
-    width:98% ;
-   }
-   #slider-8 div{
-    width:13%;
-   }
+    gap:5px;  
+}
 
-   #slider-9{
-    width:98%;
-    height:400px;
-    margin: auto;
-    margin-top: 30px;
-    }
-    #slider-9 img{
-     width:100%;
-     height:100%;
-    }
+.shades-count{
+    font-weight: bolder;
+}
 
-    #slider-10{
-     display: flex;
-     margin: auto;
-     margin-top: 40px;
-    }
-    #slider-10 div{
-     width:31.5%;
-     margin: auto;
-    }
-    #slider-10 div img{
-     width: 100%;
-     margin: auto;
-    }
+#footer1{
+    width:82%;
+    margin:auto;
+    font-family: 'sans-serif';
+}
 
-    #slider-11{
-     display: flex;
-     margin: auto;
-     margin-top: 40px;
-    }
-    #slider-11 div{
-     width:49%;
-     margin: auto;
-    }
-    #slider-11 div img{
-     width: 100%;
-     margin: auto;
-    }
+#footer1>div>p>span{
+    font-size: 15.2px;
+    line-height: 25px;
+}
+
+
+#footer1>div>p{
+    margin-bottom: 30px;
+}
+
+#apply{
+ line-height:25px;
+}
+
+#apply2{
+    font-size: 15px;
+    line-height:25px;
+}
+
+#footer1>div{
+    margin-bottom: 50px;;
+}
+
+#div3>p{
+    font-weight: 600;
+    font-size: 14px;
+}
+
+th,td{
+    border: 2px solid black;
+    padding:8px;
+}
+
+#heading1{
+    font-weight:bolder;
+    font-family: 'Montserrat', serif;
+}
+
+
+#faq>div{
+    margin-bottom: 70px;
+}
+
