--- a/index.css
+++ b/index.css
@@ -1,18 +1,18 @@
 #slider{
     height:400px;
     margin: auto;
-    margin-top: 20px;
     }
     #slider img{
      width:100%;
      height:100%;
+     margin-top: 80px;
     }
     
     #slider-2{
      width:98%;
      height:400px;
      margin: auto;
-     margin-top: 30px;
+     margin-top: 120px;
      }
      #slider-2 img{
       width:100%;
@@ -24,6 +24,7 @@
       height:400px;
       margin: auto;
       margin-top: 30px;
+      margin-bottom: 30px;
       }
       #slider-3 img{
        width:100%;
@@ -33,6 +34,8 @@
       #slider-4{
        display: flex;
        margin: auto;
+       margin-top: 15px;
+       margin-bottom: 20px;
       }
       #slider-4 div{
        width:31.5%;
@@ -61,7 +64,8 @@
        width:98%;
        height:400px;
        margin: auto;
-       margin-top: 30px;
+       margin-top: 50px;
+       margin-bottom: 30px;
        }
        #slider-5 img{
         width:100%;
@@ -71,6 +75,8 @@
        #slider-6{
         display: flex;
         margin: auto;
+        margin-top: 15px;
+        margin-bottom: 30px;
        }
        #slider-6 div{
         width:31.5%;
@@ -98,6 +104,8 @@
        #slider-7{
         display: flex;
         margin: auto;
+        margin-top: 15px;
+        margin-bottom: 50px;
        }
        #slider-7 div{
         width:31.5%;
@@ -126,6 +134,7 @@
         display: flex;
         margin: auto;
         width:98% ;
+        margin-top: 25px;
        }
        #slider-8 div{
         width:13%;
@@ -135,7 +144,8 @@
         width:98%;
         height:400px;
         margin: auto;
-        margin-top: 30px;
+        margin-top: 60px;
+        margin-bottom: 60px;
         }
         #slider-9 img{
          width:100%;
@@ -146,6 +156,7 @@
          display: flex;
          margin: auto;
          margin-top: 40px;
+         margin-bottom: 60px;
         }
         #slider-10 div{
          width:31.5%;
@@ -160,6 +171,7 @@
          display: flex;
          margin: auto;
          margin-top: 40px;
+         margin-bottom: 60px;
         }
         #slider-11 div{
          width:49%;
@@ -169,3 +181,92 @@
          width: 100%;
          margin: auto;
         }
+
+        #slider-12{
+            display: flex;
+            margin: auto;
+            margin-top: 40px;
+            margin-bottom: 50px;
+           }
+           #slider-12 div{
+            width:23%;
+            margin: auto;
+            background-color: whitesmoke;
+           }
+           #slider-12 div img{
+            width: 100%;
+            margin: auto;
+           }
+
+           #slider-13{
+            display: flex;
+            margin: auto;
+            margin-top: 40px;
+           }
+           #slider-13 div{
+            width:28%;
+            margin: auto;
+            background-color: whitesmoke;
+           }
+
+           #slider-14{
+            display: flex;
+            margin: auto;
+            margin-top: 40px;
+            margin-bottom: 40px;
+           }
+           #slider-14 div{
+            width:12%;
+            margin: auto;
+            background-color: whitesmoke;
+           }
+           #slider-14 div img{
+            width: 100%;
+            margin: auto;
+           }
+
+           #slider-15{
+            height:400px;
+            margin: auto;
+            margin-top: 20px;
+            margin-bottom: 60px;
+            }
+            #slider-15 img{
+             width:100%;
+             height:100%;
+            }
+
+            #slider-16{
+            width:90%;
+            height:300px;
+            margin:auto;
+            margin-top: 30px;
+            margin-bottom: 50px;
+            }
+            #slider-16 img{
+                width:100%;
+                height:100%;
+            }
+
+            #slider-17{
+            height:800px;
+            margin:auto;
+            margin-top: 20px;
+            position: absolute;
+            margin-bottom: 50px;
+            }
+            #slider-17 video{
+                width:100%;
+                height:100%;
+            }
+            #slider-17 h1{
+                margin-top: -450px;
+                margin-bottom: 20px;
+            }
+            #slider-17 img{
+                margin-top:20px;
+            }
+
+            *{
+                text-align: center;
+            }
