--- a/index.css
+++ b/index.css
@@ -267,6 +267,21 @@
                 margin-top:20px;
             }
 
-            *{
-                text-align: center;
+            #footer{
+                margin-top: 900px;
             }
+
+            :hover{
+                text-align: center;
+                cursor: pointer;
+            }
+
+            h1{
+                border-bottom: solid red;
+                border-bottom-width: 10px;
+                width:500px;
+                margin-left: 450px;
+            }
+
+
+            
