--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
 #slider{
     height:400px;
     margin: auto;
+    
     }
     #slider img{
      width:100%;
      height:100%;
-     margin-top: 80px;
+     margin-top: 140px;
     }
     
     #slider-2{
      width:98%;
      height:400px;
      margin: auto;
-     margin-top: 120px;
+     margin-top: 150px;
      }
      #slider-2 img{
       width:100%;
@@ -138,6 +139,7 @@
        }
        #slider-8 div{
         width:13%;
+        padding: 17px;
        }
     
        #slider-9{
@@ -187,6 +189,7 @@
             margin: auto;
             margin-top: 40px;
             margin-bottom: 50px;
+            text-align: center;
            }
            #slider-12 div{
             width:23%;
@@ -206,7 +209,6 @@
            #slider-13 div{
             width:28%;
             margin: auto;
-            background-color: whitesmoke;
            }
 
            #slider-14{
@@ -278,5 +280,7 @@
                 margin-left: 450px;
             }
 
-
+            #slider-8 h4{
+                text-align: center;
+            }
             
