--- a/index.css
+++ b/index.css
@@ -256,6 +256,7 @@
             margin-top: 20px;
             position: absolute;
             margin-bottom: 50px;
+            text-align: center;
             }
             #slider-17 video{
                 width:100%;
