--- a/shampoo.css
+++ b/shampoo.css
@@ -11,7 +11,9 @@ body > h1{
     background-color:#fee8e8;
     font-family: 'Montserrat', serif;
 }
-
+h1{
+    margin-top: 800px;
+}
 #container{
     font-family: 'Montserrat', serif;
 }
