--- a/style.css
+++ b/style.css
@@ -12,8 +12,13 @@ body > h1{
     font-family: 'Montserrat', serif;
 }
 
+
+h1{
+    margin-top: 200px;
+}
 #container{
     font-family: 'Montserrat', serif;
+    margin-top: 500px;
 }
 
 #container>div>img{
