--- a/Lipstick2.css
+++ b/Lipstick2.css
@@ -6,9 +6,7 @@ body{
     width:75%;
     margin:auto;
     display:flex;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-    
-    
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;    
 }
 
 #div1>img{
@@ -18,11 +16,13 @@ body{
 
 
 #div1{
+    margin-top: 200px;
     width:30%;
     position: sticky;
 }
 
 #div2{
+    margin-top: 200px;
     width:60%;
     padding-left:60px;
     overflow: hidden;
