--- a/loginstyle/sigin.css
+++ b/loginstyle/sigin.css
@@ -6,14 +6,14 @@
     margin-top: 150px;
     border-radius: 5px;
      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-     background-color: rgb(245, 185, 195);
+     /* background-color: rgb(245, 185, 195); */
 }
 #top{
     height: 15%;
     width:100%;
     /* border: 1px solid red; */
     margin-top: 70px;
-    background-color: rgb(197, 243, 105);
+    /* background-color: rgb(197, 243, 105); */
     
 }
 
