--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -9,6 +9,7 @@ a{
 
 #first_nav{
   display: flex;
+  height: 12px;
   justify-content: space-between;
   background-color: #fee8e8;
   padding: 10px;
@@ -46,6 +47,8 @@ a{
 
 
 nav{
+  /* border: 1px solid red; */
+
   width: 100%;
   margin: auto;
   margin-top: -3%;
@@ -57,18 +60,24 @@ nav{
 nav .wrapper {
   position: relative;
   padding: 0px 25px;
-  height: 100px;
+  height: 110px;
   width: 100%;
   margin: auto;
   display: flex;
   align-items: center;
   z-index: 99;
 }
+.wrapper{
+  /* border: 1px solid red; */
+  height: 50px;
+  padding-left: 200px;
+}
 .wrapper .nav-links {
   display: inline-flex;
 }
 .nav-links li {
   list-style: none;
+  padding-left: 50px;
 }
 .nav-links li a {
   color: #1f1f1f;
@@ -176,29 +185,69 @@ nav input {
 
 #img{
   display: flex;
+  /* width: 100px; */
+  /* border-bottom: 1px solid grey; */
+  padding-bottom: 5px;
 }
 
 #img > img{
-  padding-left: 15px;
+  padding-left: 90px;
+  padding-right: 90px;
   width: 100%;
-  height: 80px;
+  height: 60px;
 }
 
-#img >div > input{
-  height: 40px;
+/* #img >div > input{
+  height: 36px;
   width: 700px;
   padding-left: 10px;
-  font-size: 20px;
+  font-size: 15px;
+  border-radius: 20px; */
+/* } */
+#Search_inp{
+  display: flex;
+  /* border: 1px solid red; */
 }
+#Asearch{
+  border: 1px solid grey;
+  margin: auto;
+  margin-left: 50px;
 
+  /* margin-right: 0%; */
+  height: 38px;
+  width: 500px;
+  background-color:#dde5eb;
+  border-radius: 20px 0px 0px 20px;
+  font-size: large;
+  padding-left: 18px;
+
+}
+#Asearch:hover,#Asearch_button:hover{
+  background-color: whitesmoke;
+}
+#Asearch_button{
+  border: 1px solid grey;
+  background-color:#dee2e6;
+  margin: auto;
+  width: 100px;
+  height: 40px;
+  border-radius: 0px 20px 20px 0px;
+  margin-left: 0px;
+  font-size: large;
+}
 #img > div{
   margin-top: 2%;
 }
 
 #user{
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: spa; */
+  padding-left: 40px;
   width: 20%;
   margin-top: 2%;
   font-size: 20px;
+}
+#user a{
+  padding-left: 40px;
+  padding-right: 40px;
 }
