--- a/styles/style.css
+++ b/styles/style.css
@@ -12,8 +12,13 @@ body > h1{
     font-family: 'Montserrat', serif;
 }
 
+
+h1{
+    margin-top: 200px;
+}
 #container{
     font-family: 'Montserrat', serif;
+    margin-top: 500px;
 }
 
 #container>div>img{
@@ -45,7 +50,7 @@ body > h1{
     grid-column-gap: 40px;
     
     margin:auto;
-    margin-top:60px;
+    margin-top:200px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     margin-bottom: 50px; 
     
