--- a/styles/Lipstick2.css
+++ b/styles/Lipstick2.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD:styles/Lipstick2.css
+
 body{
     font-family: 'Montserrat',sans-serif;;
 }
@@ -133,7 +133,7 @@ body{
 
 #usage_div2 h3{
     text-decoration: underline;
-=======
+}
 body{
     font-family: 'Montserrat',sans-serif;;
 }
@@ -266,5 +266,4 @@ body{
 
 #usage_div2 h3{
     text-decoration: underline;
->>>>>>> d978b7fe2ba4b3c652820d06610213c8a3d861d3:Lipstick2.css
 }
