--- a/styles/Lipstick2.css
+++ b/styles/Lipstick2.css
@@ -123,7 +123,10 @@
     margin-bottom: 50px;
 }
 
-#usage_div2 p,ul,h4,ol{
+#usage_div2 > p,
+#usage_div2 > ul,
+#usage_div2 > h4,
+#usage_div2 > ol{
     margin-bottom:25px;
     font-weight: 600;
 }
